--- a/source/css/_common/_normalize.scss
+++ b/source/css/_common/_normalize.scss
@@ -208,14 +208,14 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 
+/*
 hr {
-    margin-top: 52px;
-    margin-bottom: 42px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     display: block;
-    border: 0;
     text-align: center;
 }
-
+*/
 /**
  * Contain overflow in all browsers.
  */
